--- a/application/views/event_calendar.html
+++ b/application/views/event_calendar.html
@@ -6,17 +6,26 @@
   <title>Document</title>
 </head>
 <script script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.14/index.global.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" ></script>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+<!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" ></script> -->
+<!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"> -->
+<link rel="stylesheet" href="bootstrap/bootstrap-5.3.3-dist/css/bootstrap.css">
+<link rel="stylesheet" href="bootstrap/bootstrap-5.3.3-dist/js/bootstrap.bundle.js">
 <body>
-	<!-- 상단탭 -->
-	<section>
-		<div>
-			
-		</div>
-	</section>
+	<!-- 공통헤더 -->
+	<section id="header"></section>
+
+	<!-- 로고 -->
+	<div class="text-center" style="margin-top: 72px;">
+		<img src="img/logo.svg">
+	</div>
+
+	<!-- 타이틀 -->
+	<div class="text-center" style="margin-top: 72px;">
+		<img src="img/title.svg">
+	</div>
+
 	<!-- 달력 -->
-  <!-- <section class="content">
+  <section class="content" style="margin-top: 105px;">
     <div class="container-fluid">
       <div class="row">
         <div class="col">
@@ -28,10 +37,17 @@
         </div>
       </div>
     </div>
-  </section> -->
+  </section>
 </body>
 
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script>
+
+	$(function(){
+		$("#header").load("common/header.html");
+		$("#footer").load("footer.html");
+	})
+
   document.addEventListener('DOMContentLoaded', function(){
     var calendarEl = document.getElementById('calendar');
     var calendar = new FullCalendar.Calendar(calendarEl, {
