2차 가이드라인 화면 제작

--- a/application/views/common/footer.html
+++ b/application/views/common/footer.html
@@ -1,7 +1,7 @@
 
 <!-- 푸터 -->
-<footer class="footer py-5 " style="background-color: #FBFBFB; margin-top: 180px;">
-	<div class="mx-auto" style="width: 1420px;">
+<footer class="footer py-5 " style="background-color: #FBFBFB; margin-top: 100px;">
+	<div class="mx-auto" style="max-width: 1420px;">
 		<div>
 			<p class="fw-bold fs-2">남해군청</p>
 		</div>
