반응형 제외 pc 프론트 작업

--- a/application/views/common/header.html
+++ b/application/views/common/header.html
@@ -2,10 +2,12 @@
 <style>
 #tab01.active {
 	background-color: #F4BC1B; /* tab01 클릭 시 배경색 */
+	/* max-width: 512px; */
 }
 
 #tab02.active {
 	background-color: #5ED1FF; /* tab02 클릭 시 배경색 */
+	/* max-width: 512px; */
 }
 </style>
 <!-- 상단탭 -->
